Fix sweep auto-trigger, align Trigger button, and hide ugly number input arrows

--- a/css/laboratory.css
+++ b/css/laboratory.css
@@ -196,3 +196,13 @@ main {
 .signal-row input[type="number"], .signal-row select {
   width: 100%;
 }
+
+/* Hide number input spin buttons */
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+input[type=number] {
+  -moz-appearance: textfield; /* Firefox */
+}
